...
                                      decoration: InputDecoration(
                                          labelText: 'Password'),
                                      obscureText: true,
                                    ),
                                    SizedBox(height: 20),
                                    ElevatedButton(
                                      key: Key('login_user'),
                                      onPressed: () {
                                        final username =
                                            _usernameController.text;
                                        final password =
                                            _passwordController.text;
                                        final user = User(
...
